Stellar notebook: save preprocessed graph

--- a/Stellar.ipynb
+++ b/Stellar.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f25c95e0",
+   "id": "27c5170d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e3101f",
+   "id": "018542ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,13 +81,13 @@
     "args.num_seed_class = config['num_seed_class']\n",
     "args.cuda = torch.cuda.is_available()\n",
     "args.device = torch.device(\"cuda\" if args.cuda else \"cpu\")\n",
-    "args.use_processed_graph = False"
+    "args.use_processed_graph = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89554c4f",
+   "id": "2e37b11b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ef70db",
+   "id": "43fb7957",
    "metadata": {},
    "source": [
     "### Preparing dataset"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd4de2a4",
+   "id": "e7da87d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c8baa6",
+   "id": "5772a106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515f4370",
+   "id": "fc6c499e",
    "metadata": {
     "scrolled": true
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb53875",
+   "id": "92210779",
    "metadata": {},
    "source": [
     "#### Compute graph between cells"
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f36c7fa",
+   "id": "bb3a85a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,11 +199,16 @@
    "source": [
     "PROCESSED_GRAPH_FILE = os.path.join(EXPERIMENT_DIR, \"dataset_preprocessed.pkl\")\n",
     "\n",
-    "if args.use_processed_graph:\n",
-    "    labeled_X, labeled_y, unlabeled_X, labeled_edges, unlabeled_edges, inverse_dict = pickle.load(open(PROCESSED_GRAPH_FILE, \"rb\" ))\n",
+    "if args.use_processed_graph and os.path.exists(PROCESSED_GRAPH_FILE):\n",
+    "    packed_graph = pickle.load(open(PROCESSED_GRAPH_FILE, \"rb\" ))\n",
     "else:\n",
-    "    labeled_X, labeled_y, unlabeled_X, labeled_edges, unlabeled_edges = prepare_graph(train_df, val_df, args.distance_threshold, args.sample_rate)\n",
+    "    packed_graph = prepare_graph(train_df, val_df, args.distance_threshold, args.sample_rate)\n",
+    "    \n",
+    "    # save to .pkl \n",
+    "    with open(PROCESSED_GRAPH_FILE, 'wb') as file:\n",
+    "        pickle.dump(packed_graph, file)\n",
     "\n",
+    "labeled_X, labeled_y, unlabeled_X, labeled_edges, unlabeled_edges = packed_graph\n",
     "dataset = GraphDataset(labeled_X, labeled_y, unlabeled_X, labeled_edges, unlabeled_edges)"
    ]
   },
@@ -228,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab4ba6b1",
+   "id": "b4cea264",
    "metadata": {},
    "source": [
     "### Validation"
@@ -237,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715f1b84",
+   "id": "93c8b15a",
    "metadata": {},
    "outputs": [],
    "source": [
