Refactor STELLAR_run.py so the experiment can be run from command line

--- a/Stellar.ipynb
+++ b/Stellar.ipynb
@@ -81,7 +81,7 @@
     "args.num_seed_class = config['num_seed_class']\n",
     "args.cuda = torch.cuda.is_available()\n",
     "args.device = torch.device(\"cuda\" if args.cuda else \"cpu\")\n",
-    "args.use_processed_graph = True"
+    "args.use_processed_graph = config['use_processed_graph']"
    ]
   },
   {
